# turnstile-app

./: .gitignore  README.md  pyproject.toml  run_app.sh
app/: config.py  db.py  exceptions.py  exeptions.py  guest_recognition.py  main.py  qgl_picam2_widget.py
app/core/: config.py
app/db/: __init__.py  db.py  scaffold.sql
app/guest_recognition/: __init__.py  embedder.py  exceptions.py  guest_recognition.py  open_cv.py  status_fsm.py  statuses.py  turnstile_gpio.py
app/guest_recognition/detectors/: __init__.py  detector_blazeface.py  detector_haarcascade.py  detector_pyzbar.py
app/qt/: __init__.py  app.py
app/qt/widgets/: central_widget.py  left_widget.py  right_widget.py
data/embeddings/: embeddings.npz
data/svm_model/: svm_model_160x160.pkl
src/: .env.template
src/core/: config.py  scaffold.sql
src/core/schemas/: __init__.py  turnstile_passage.py  turnstile_settings.py
src/db/: db.py  scaffold.sql
src/guest_recognition/: __init__.py  embedder.py  guest_recognition.py  helpers.py  open_cv.py  status_fsm.py  svm_model.py  turnstile_gpio.py
src/guest_recognition/actions/: __init__.py  db.py  server.py
src/guest_recognition/detectors/: __init__.py  blazeface.py  haarcascade.py  pyzbar.py
src/guest_recognition/stages/: __init__.py  post_processing.py  pre_processing.py  processing.py
src/guest_recognition/utils/: __init__.py  fps.py  open_cv.py  turnstile_gpio.py
src/qt/: __init__.py  app.py  helpers.py  picamera_controls.py
src/qt/widgets/: __init__.py  central_widget.py  left_widget.py
