[tool.poetry]
name = "turnstile-app"
version = "0.1.1"
description = "Turnstile app on Raspberry Pi 5 with PiCamera for skipass.io"
authors = ["skipass.io"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyzbar = "^0.1.9"
opencv-python-headless = "^4.10.0.84"
qrcode = {extras = ["pil"], version = "^8.0"}
typer = "^0.12.5"
requests = "^2.32.3"
pydantic = "^2.11.2"
pydantic-settings = "^2.8.1"

# Guest Recognition Dependencies
tensorflow = "^2.17.0"
keras-facenet = "^0.3.2"
scipy = "^1.14.0"
scikit-learn = "1.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
